--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="gray_200">#EEEEEE</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_500">#9E9E9E</color>
+    <color name="gray_600">#FF757575</color>
+    <color name="gray_700">#616161</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_teal">#0DA0B3</color>
+    <color name="dark_teal">#0B7280</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
 </resources>
