--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Fredwong_COMP304Lab3_ex1" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Fredwong_COMP304Lab3_ex1" parent="Theme.MaterialComponents.DayNight">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/light_teal</item>
+        <item name="colorPrimaryVariant">@color/dark_teal</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 
     <style name="Theme.Fredwong_COMP304Lab3_ex1" parent="Base.Theme.Fredwong_COMP304Lab3_ex1" />
