--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.PatientActivity">
+    tools:context=".views.UpdateInfoActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -173,12 +173,23 @@
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/buttonAddPatientInfo"
+                android:id="@+id/buttonSavePatientInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textSize="20sp"
-                android:text="@string/menu_add_patient" />
+                android:text="@string/save" />
+
+            <Button
+                android:id="@+id/buttonViewTests"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="20sp"
+                android:text="@string/view_test" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
